--- a/django_knowledge_tree/tree/templates/tree/base.html
+++ b/django_knowledge_tree/tree/templates/tree/base.html
@@ -4,18 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Knowledge Tree{% endblock %}</title>
-    <!-- 引入 sb-admin-2 的 CSS（确保 static 目录中有对应文件） -->
+    <!-- 引入 sb-admin-2 的最小化 CSS 文件 -->
     <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
     {% block extra_head %}{% endblock %}
 </head>
 <body id="page-top">
     <div id="wrapper">
-        <!-- 可在此添加侧边栏等内容 -->
+        <!-- 可添加侧边栏或其他页面结构 -->
         <div id="content-wrapper" class="d-flex flex-column">
             <div id="content">
                 {% block content %}{% endblock %}
             </div>
         </div>
     </div>
+    <!-- 在页面底部引入 jQuery 和 sb-admin-2 的脚本 -->
+    <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+    <!-- 下面两个 sb-admin-2 脚本可以根据需要选择使用其一个或者都引入 -->
+    <script src="{% static 'js/sb-admin-2.js' %}"></script>
+    {% block extra_scripts %}{% endblock %}
 </body>
 </html>
