--- a/django_knowledge_tree/tree/templates/tree/index.html
+++ b/django_knowledge_tree/tree/templates/tree/index.html
@@ -1,9 +1,20 @@
 {% extends 'tree/base.html' %}
-{% block title %}知识树浏览{% endblock %}
+{% block title %}知识点树列表{% endblock %}
 {% block content %}
 <div class="container-fluid">
-    <h1 class="h3 mb-4 text-gray-800">知识树浏览</h1>
-    <pre>{{ tree }}</pre>
-    <a href="{% url 'tree:edit' %}" class="btn btn-primary">编辑知识树</a>
+    <h1 class="h3 mb-4 text-gray-800">知识点树列表</h1>
+    <a href="{% url 'tree:create_tree' %}" class="btn btn-success mb-3">创建新知识点树</a>
+    <ul class="list-group">
+      {% for tree in trees %}
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <a href="{% url 'tree:view_tree' tree.id %}">{{ tree.title }}</a>
+        <div>
+          <a href="{% url 'tree:edit_tree' tree.id %}" class="btn btn-sm btn-primary">编辑</a>
+        </div>
+      </li>
+      {% empty %}
+      <li class="list-group-item">暂无知识点树</li>
+      {% endfor %}
+    </ul>
 </div>
 {% endblock %}
