--- a/django_knowledge_tree/tree/templates/tree/base.html
+++ b/django_knowledge_tree/tree/templates/tree/base.html
@@ -58,16 +58,27 @@
 
       <!-- 新增用户认证导航项：登录或注销 -->
       <li class="nav-item">
+        <!-- 用户认证导航项：注册、登录或注销 -->
         {% if user.is_authenticated %}
-          <a class="nav-link" href="{% url 'logout' %}">
-            <i class="fas fa-sign-out-alt fa-fw"></i>
-            <span>注销 ({{ user.username }})</span>
-          </a>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">
+              <i class="fas fa-sign-out-alt fa-fw"></i>
+              <span>注销 ({{ user.username }})</span>
+            </a>
+          </li>
         {% else %}
-          <a class="nav-link" href="{% url 'login' %}">
-            <i class="fas fa-sign-in-alt fa-fw"></i>
-            <span>登录</span>
-          </a>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">
+              <i class="fas fa-sign-in-alt fa-fw"></i>
+              <span>登录</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">
+              <i class="fas fa-user-plus fa-fw"></i>
+              <span>注册</span>
+            </a>
+          </li>
         {% endif %}
       </li>
 
@@ -122,7 +133,7 @@
 
   <!-- 脚本部分 -->
   <!-- 通过 CDN 加载 jQuery（或者使用本地静态文件） -->
-  <script src="{% static 'js/jquery-3.7.1.min.js" integrity="sha256-7c0ldupnRVwPPNlK8j6J/5b4C2k2UOU93N3a56hB1os=" crossorigin="anonymous"></script>
+  <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
   <!-- 加载本地 Popper.js -->
   <script src="{% static 'js/popper.min.js' %}"></script>
   <!-- 加载 Bootstrap Bundle（包括 Dropdown 组件）-->
