--- a/django_knowledge_tree/tree/templates/tree/edit.html
+++ b/django_knowledge_tree/tree/templates/tree/edit.html
@@ -7,8 +7,33 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
+        <div class="form-group">
+            <label for="json-data">知识点树 JSON</label>
+            <div id="editor" style="height: 400px;"></div>
+        </div>
         <button type="submit" class="btn btn-success">保存</button>
         <a href="{% url 'tree:index' %}" class="btn btn-secondary">返回</a>
     </form>
 </div>
+
+{% endblock %}
+{% block extra_scripts %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+          // Initialize Ace Editor for JSON editing
+          var editor = ace.edit("editor");
+          editor.setTheme("ace/theme/github");
+          editor.session.setMode("ace/mode/json");
+
+          // Preload the JSON data into the editor
+          var jsonData = JSON.parse('{{ form.data.value|escapejs }}');
+          editor.setValue(JSON.stringify(jsonData, null, 2));
+
+          // Optionally, you can also bind an event to format or validate the JSON
+          editor.on('change', function() {
+              // You can perform validation or auto-save as needed
+          });
+      });
+    </script>
 {% endblock %}
